# Nevanlinna

./: .clang-tidy  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE.txt  README.md
.github/workflows/: build.yml
c++/nevanlinna/: CMakeLists.txt  kernel.cpp  kernel.hpp  nevanlinna.cpp  nevanlinna.hpp  nevanlinna_error.hpp  nevanlinna_parameters_t.hpp  solver.cpp  solver.hpp
c++/triqs_Nevanlinna/: CMakeLists.txt  Caratheodory_kernel.cpp  Caratheodory_kernel.hpp  Nevanlinna_error.hpp  Nevanlinna_factorization.cpp  Nevanlinna_factorization.hpp  Nevanlinna_kernel.cpp  Nevanlinna_kernel.hpp  Nevanlinna_parameters_t.hpp  complex.hpp  kernel.cpp  kernel.hpp  kernel_factory.hpp  kernels.hpp  solver.cpp  solver.hpp  solver_core.cpp  solver_core.hpp  types.hpp  utils.hpp
cmake/: FindMPFR.cmake
doc/: CMakeLists.txt  ChangeLog.md  about.rst  conf.py.in  documentation.rst  index.rst  install.rst  issues.rst
doc/_templates/: sideb.html
doc/tutorials/: GW_tutorial-2orb.ipynb  GW_tutorial.ipynb  SIAM_discrete.ipynb  hubbard_square_non_int.ipynb
examples/: CMakeLists.txt  ndarray_example.cpp
examples/c++/: CMakeLists.txt  ndarray_caratheodory_example.cpp  ndarray_example.cpp
examples/c++/data/: input.h5
examples/python/: atom.py  hardy.py  ndarray_example.py  siam.py
examples/python/data/: input.h5
packaging/: CMakeLists.txt  TRIQS-Nevanlinna-3.1.0-foss-2021b.eb  TRIQS-Nevanlinna-3.2.0-foss-2021b.eb  TRIQS-Nevanlinna-foss-2021b.eb.in  TRIQS-nevanlinna-3.1.0-foss-2021b.eb
packaging/conda/: meta.yaml  meta.yaml.in
python/nevanlinna/: __init__.py  nevanlinna_module_desc.py  parameters_nevanlinna_parameters_t.rst
python/triqs_Nevanlinna/: CMakeLists.txt  __init__.py  kernels.py  kernels_core_desc.py  kernels_desc.py  parameters_Nevanlinna_parameters_t.rst  solver.py  solver_core_desc.py  solver_desc.py
share/: CMakeLists.txt  nevanlinna.modulefile.in  replace_and_rename.py
share/cmake/: CMakeLists.txt  triqs_Nevanlinna-config.cmake.in  triqs_NevanlinnaConfig.cmake.in
test/: CMakeLists.txt
test/c++/: CMakeLists.txt  basic.cpp  complex_math_test.cpp  factorization_test.cpp  kernel_test.cpp  solver_test.cpp  test_common.hpp  utils_test.cpp
test/c++/data/: data.h5  triqs_data.h5
test/python/: Basic.py  CMakeLists.txt  Solver.py
